--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                     <nav>
                         <ul>
                             <li>
-                                <a rel="nofollow" rel="noreferrer"href="">EX1</a>
+                                <a href="EX3/index.html">EX3</a>
                             </li>
                             <li>
-                                <a rel="nofollow" rel="noreferrer"href="">EX2</a>
+                                <a href="">EX4</a>
                             </li>
                             <li>
-                                <a rel="nofollow" rel="noreferrer"href="">EX3</a>
+                                <a href="">EX5</a>
                             </li>
                             <li>
-                                <a rel="nofollow" rel="noreferrer"href="">EX4</a>
+                                <a rel="nofollow" rel="noreferrer" href="">EX6</a>
                             </li>
                         </ul>
                     </nav>
