--- a/EX3/index.html
+++ b/EX3/index.html
@@ -11,19 +11,19 @@
             <div class="notice">
                 <ul class="notice-head">
                     <li class="notice-title">
-                        <a href="">公告</a>
+                        <a href="" class="notbar">公告</a>
                     </li>
                     <li class="notice-title">
-                        <a href="">规则</a>
+                        <a href="" class="notbar">规则</a>
                     </li>
                     <li class="notice-title">
-                        <a href="">论坛</a>
+                        <a href="" class="notbar">论坛</a>
                     </li>
                     <li class="notice-title">
-                        <a href="">安全</a>
+                        <a href="" class="notbar">安全</a>
                     </li>
                     <li class="notice-title">
-                        <a href="">公益</a>
+                        <a href="" class="notbar">公益</a>
                     </li>
                 </ul>
                 <div class="notice-body">
@@ -43,13 +43,13 @@
                 </div> 
                 <div class="user-button">
                     <div class="button">
-                        <a href="">登陆</a>
+                        <a href="" class="btn">登陆</a>
                     </div>    
                     <div class="button">
-                        <a href="">免费注册</a>
+                        <a href="" class="btn">免费注册</a>
                     </div>
                     <div class="button">
-                        <a href="">免费开店</a>
+                        <a href="" class="btn">免费开店</a>
                     </div>
                 </div>
             </div>
