add text and link hover

--- a/EX3/index.html
+++ b/EX3/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-
     <head>  
         <title>EX3</title>
         <link href="css/style.css" rel="stylesheet">
@@ -38,8 +37,12 @@
                 <div class="name-pass">
                     <div id="img"></div>
                     <div id="blank"></div>
-                    <div class="user-info"></div>
-                    <div class="user-info"></div>
+                    <!-- <div class="user-info"></div> -->
+                    <form>
+                    <input type="text" value="点击输入用户名" id="userinfo" onclick="clear()" />
+                    <!-- <div class="user-info"></div> -->
+                    <form>
+                    <input type="text" value="点击输入密码" id="userinfo" onclick="clear()" />
                 </div> 
                 <div class="user-button">
                     <div class="button">
@@ -165,6 +168,6 @@
                 </div>
             </div>
         </div>
-        <script src="js/script.js"></script>
     </body>
+    <script src="js/script.js"></script>
 </html>
