--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <a href="EX3/index.html">EX3</a>
                             </li>
                             <li>
-                                <a href="">EX4</a>
+                                <a href="EX4/index.html">EX4</a>
                             </li>
                             <li>
                                 <a href="">EX5</a>
