--- a/EX4/src/Task3/index.html
+++ b/EX4/src/Task3/index.html
@@ -14,7 +14,7 @@
                     <p>标题文字</p>
                 </div>
                 <div class="ui-cnt-info">
-                    <p>具体信息 <span>xxxxxx</span></p>
+                    <p>具体信息 <span>XXXXXX</span></p>
                 </div>
                 <div class="ui-cnt-proinfo">
                     <div class="ui-proinfo-price">
@@ -22,7 +22,7 @@
                         <p class="ui-price-origin">￥原价XX.00</p>
                     </div>
                     <div class="ui-proinfo-sales">
-                        <p><span>XXX</span>件已售</p>
+                        <p><span>XXX </span>件已售</p>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     <p>标题文字</p>
                 </div>
                 <div class="ui-cnt-info">
-                    <p>具体信息 <span>xxxxxx</span></p>
+                    <p>具体信息 <span>XXXXXX</span></p>
                 </div>
                 <div class="ui-cnt-proinfo">
                     <div class="ui-proinfo-price">
@@ -42,7 +42,7 @@
                         <p class="ui-price-origin">￥原价XX.00</p>
                     </div>
                     <div class="ui-proinfo-sales">
-                        <p><span>XXX</span>件已售</p>
+                        <p><span>XXX </span>件已售</p>
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <p>标题文字</p>
                 </div>
                 <div class="ui-cnt-info">
-                    <p>具体信息 <span>xxxxxx</span></p>
+                    <p>具体信息 <span>XXXXXX</span></p>
                 </div>
                 <div class="ui-cnt-proinfo">
                     <div class="ui-proinfo-price">
@@ -62,7 +62,7 @@
                         <p class="ui-price-origin">￥原价XX.00</p>
                     </div>
                     <div class="ui-proinfo-sales">
-                        <p><span>XXX</span>件已售</p>
+                        <p><span>XXX </span>件已售</p>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <p>标题文字</p>
                 </div>
                 <div class="ui-cnt-info">
-                    <p>具体信息 <span>xxxxxx</span></p>
+                    <p>具体信息 <span>XXXXXX</span></p>
                 </div>
                 <div class="ui-cnt-proinfo">
                     <div class="ui-proinfo-price">
@@ -82,7 +82,7 @@
                         <p class="ui-price-origin">￥原价XX.00</p>
                     </div>
                     <div class="ui-proinfo-sales">
-                        <p><span>XXX</span>件已售</p>
+                        <p><span>XXX </span>件已售</p>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <p>标题文字</p>
                 </div>
                 <div class="ui-cnt-info">
-                    <p>具体信息 <span>xxxxxx</span></p>
+                    <p>具体信息 <span>XXXXXX</span></p>
                 </div>
                 <div class="ui-cnt-proinfo">
                     <div class="ui-proinfo-price">
@@ -102,7 +102,7 @@
                         <p class="ui-price-origin">￥原价XX.00</p>
                     </div>
                     <div class="ui-proinfo-sales">
-                        <p><span>XXX</span>件已售</p>
+                        <p><span>XXX </span>件已售</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <p>标题文字</p>
                 </div>
                 <div class="ui-cnt-info">
-                    <p>具体信息 <span>xxxxxx</span></p>
+                    <p>具体信息 <span>XXXXXX</span></p>
                 </div>
                 <div class="ui-cnt-proinfo">
                     <div class="ui-proinfo-price">
@@ -122,7 +122,7 @@
                         <p class="ui-price-origin">￥原价XX.00</p>
                     </div>
                     <div class="ui-proinfo-sales">
-                        <p><span>XXX</span>件已售</p>
+                        <p><span>XXX </span>件已售</p>
                     </div>
                 </div>
             </div>
