--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <a href="">EX5</a>
                             </li>
                             <li>
-                                <a rel="nofollow" rel="noreferrer" href="">EX6</a>
+                                <a href="EX6/index.html">EX6</a>
                             </li>
                         </ul>
                     </nav>
