--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                 <a href="EX4/index.html">EX4</a>
                             </li>
                             <li>
-                                <a href="">EX5</a>
+                                <a href="EX5/index.html">EX5</a>
                             </li>
                             <li>
                                 <a href="EX6/index.html">EX6</a>
