--- a/EX5/index.html
+++ b/EX5/index.html
@@ -106,7 +106,9 @@
 						<td class="bus_icon">
 							<i class="fa fa-bus" id="bus_icon1"></i>
 						</td>
-						<td class="bus_info" colspan="2">(新大阪行)</td>
+						<td class="bus_info" colspan="2">
+							<a href="">のぞみ203号(新大阪行)</a>
+						</td>
 						<td class="blank"></td>
 						<td class="price_info"><span>3,350円</span></td>
 						<td class="order_info">
@@ -128,9 +130,7 @@
 						<td class="name" colspan="2">新大阪</td>
 						<td class="blank1"></td>
 						<td class="state">
-							23番線着
-							<br>
-							16番線発	
+							23番線着<br>16番線発	
 						</td>
 						<td class="link" colspan="3">
 						<div class="link_box">
@@ -158,7 +158,7 @@
 						<td class="bus_icon">
 							<i class="fa fa-bus" id="bus_icon2"></i>
 						</td>
-						<td class="bus_info" colspan="2">(姬路行)</td>
+						<td class="bus_info" colspan="2">JR京都線新快速(姬路行)</td>
 						<td class="blank"></td>
 						<td class="price_info">
 							<span><i class="fa fa-long-arrow-down"></i></span>
