--- a/EX7/Task2/index.html
+++ b/EX7/Task2/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>EX7-Task2</title>
 		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-		<link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+		<link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
@@ -385,6 +385,6 @@
 								</div>
 							</div>
 						</body>
-						<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
-						<script src="http://apps.bdimg.com/libs/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+						<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 					</html>
