--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
                                 <a href="EX6/index.html">EX6</a>
                             </li>
                             <li>
-                                <a href="">EX7</a>
-                                <li class="task">
-                                    <a href="EX7/Task1/index.html">Task1</a>
-                                </li>
-                                <li class="task">
-                                    <a href="EX7/Task2/index.html">Task2</a>
-                                </li>
+                                <a href="EX7/Task1/index.html">EX7</a>
                             </li>
                         </ul>
                     </nav>
