--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
                                 <a href="EX6/index.html">EX6</a>
                             </li>
                             <li>
-                                <a href="EX7/Task1/index.html">EX7</a>
+                                <a href="">EX7</a>
+                                <li class="task">
+                                    <a href="EX7/Task1/index.html">task1</a>
+                                </li>
+                                <li class="task">
+                                    <a href="EX7/Task2/index.html">task2</a>
+                                </li>
                             </li>
                         </ul>
                     </nav>
