--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
                             </li>
                             <li>
                                 <a href="">EX7</a>
-                                <li class="task">
-                                    <a href="EX7/Task1/index.html">task1</a>
-                                </li>
-                                <li class="task">
-                                    <a href="EX7/Task2/index.html">task2</a>
-                                </li>
+                                <br>
+                                <a href="EX7/Task1/index.html" class="task">Task1</a>
+                                <br>
+                                <a href="EX7/Task2/index.html" class="task">Task2</a>
                             </li>
                         </ul>
                     </nav>
