--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                                 <br>
                                 <a href="EX7/Task2/index.html" class="task">Task2</a>
                             </li>
+                            <li>
+                                <a href="EX9/index.html">EX9</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
