--- a/EX9/index.html
+++ b/EX9/index.html
@@ -7,8 +7,10 @@
 		<title>EX9</title>
 	</head>
 	<body>
-		<div id="myMap"></div>
+		<div id="Map-Container"></div>
+		<div id="Result-Box"></div>
 	</body>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=46oImcPcyvQt8LSTpkEPmpkaU1gjwClT"></script>
+	<script src="lib/jQuery/jquery-3.2.1.js"></script>
 	<script src="js/script.js"></script>
 </html>
