--- a/EX9/index.html
+++ b/EX9/index.html
@@ -13,5 +13,5 @@
 	<script src="lib/jQuery/jquery-3.2.1.js"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=46oImcPcyvQt8LSTpkEPmpkaU1gjwClT"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=U4KNWi9SoNoW3fdFSF0GrulyzcjdVrja"></script>
-	<script src="js/script.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </html>
